finished fetch and convert component

--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -30,3 +30,11 @@
   list-style: none;
  
 }
+
+.convert{
+  background-color: var(--portland-orange);
+}
+
+.criptodashboard{
+  background-color: #1B998B;
+}
