--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -14,6 +14,7 @@
   background-color: #D7263D;
   height: 75%;
   width: 75%;
+  text-align: center;
 }
 .card img {
   width: 100%;
@@ -36,9 +37,11 @@
 
 .articlelist li{
   list-style: none;
-  float: left;
+ /* float: left;*/
   background-color: #1B998B;
   justify-content: center;
+  display: inline-block;
+    vertical-align: top;
 }
 
 .card{
