--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -72,9 +72,24 @@
  
 }
 
+
+.rate{
+  text-shadow: 1px 1px rgba(0,0,0);
+  color: var(--june-bud);
+  font-size: 30px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 15em;
+  margin-right: 15em;
+  font-family: "Cinzel";
+  background-color: rgba(0,0,0,.5);
+  border-radius: 60px;
+
+}
+
 .convert{
  background-color: var(--portland-orange);
- border-radius: 25px;
+ border-radius: 25px 25px 0px 0px;
 }
 
 .criptodashboard{
@@ -99,15 +114,35 @@ table{
 }
 
 button{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   cursor: pointer;
   font-size: 16px;
+  margin: 5px;
+  border-radius: 5px;
+  
 }
 
 h2{
+  text-shadow: 1px 1px rgba(0,0,0);
+  color: var(--june-bud);
   font-size: 30px;
   margin-top: 10px;
   margin-bottom: 10px;
+  font-family: "Cinzel";
+  background-color: rgba(0,0,0,.5);
+  border-radius: 20px 20px 0px 0px;
+
 }
+
+.currenceytext{
+  text-shadow: .5px .5px rgba(0,0,0);
+  color: var(--june-bud);
+  font-family: "Staatliches";
+  padding: 1em;
+  background-color: rgb(0,0,0,.2);
+  border-radius: 60px;
+}
+
 
 p{
   font-size: 20px;
@@ -134,4 +169,11 @@ p{
 background-color: rgb(0,0,0,.7); 
 padding: 30px;
 border-radius: 5px;
+}
+
+.exchanger{
+  color: var(--june-bud);
+  font-family: "Cinzel";
+  font-weight: bold;
+  text-shadow: .5px .5px rgba(0,0,0)
 }
