--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -177,3 +177,9 @@ border-radius: 5px;
   font-weight: bold;
   text-shadow: .5px .5px rgba(0,0,0)
 }
+
+.top_button{
+  background-color: var(--space-cadet);
+  box-shadow:  0 0 .25em black;
+}
+
