--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -9,6 +9,7 @@
   --june-bud: rgba(197, 216, 109, 1);
   background: linear-gradient(#c6dbda,#fee1e8,#fed7c3, #f6eac2, #ecd5e3);
 }
+#c6dbda
 .news-list{
   margin: 0 auto;
   background-color:	rgb(0,0,0,.7);
@@ -23,12 +24,14 @@
 }
 .header{
   text-align: center;
-  border: solid var(--june-bud);
+  border: solid #73a7e1;
   font-family: 'Press Start 2P';
   color: var(--space-cadet);
-  text-shadow: 2px 2px var(--portland-orange);
+  text-shadow: 2px 2px #bdac73;
   margin: 24%;
-  
+  background:linear-gradient( rgba(255,255,255, 0),rgba(255,255,255,1));
+  border-radius: 25px;
+  font-size: .82vw;
 }
 
 .article{
@@ -183,3 +186,6 @@ border-radius: 5px;
   box-shadow:  0 0 .25em black;
 }
 
+h1{
+  white-space: nowrap
+}
