--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -84,23 +84,17 @@
 
 
 .rate{
-  text-shadow: 1px 1px rgba(0,0,0);
-  color: var(--june-bud);
+  color: #c6dbda;
+  text-shadow: 2px 2px rgba(0,0,0);
   font-size: 30px;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 15em;
   margin-right: 15em;
-  font-family: "Cinzel";
-  background-color: rgba(0,0,0,.5);
-  border-radius: 60px;
-
+  font-family: "Press Start 2P";
 }
 
-.convert{
- background-color: var(--portland-orange);
- border-radius: 25px 25px 0px 0px;
-}
+
 
 .criptodashboard{
   background-color: rgba(255, 255, 255, 0.375);
@@ -117,6 +111,7 @@
 table{
   width: 500px;
   margin: 0 auto;
+  border-spacing: 4em 3em;
 }
 
 #cripto{
@@ -129,38 +124,38 @@ table{
 }
 
 button{
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Staatliches';
   cursor: pointer;
   font-size: 16px;
   margin: 5px;
   border-radius: 5px;
   background-color: rgb(255,255,255,.375);
+  margin-bottom: 4em;
+  padding: 1em;
 }
 
 h2{
   text-shadow: 1px 1px rgba(0,0,0);
-  color: var(--june-bud);
   font-size: 30px;
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: "Cinzel";
-  background-color: rgba(0,0,0,.5);
   border-radius: 20px 20px 0px 0px;
 
 }
 
 .currenceytext{
-  text-shadow: .5px .5px rgba(0,0,0);
-  color: var(--june-bud);
-  font-family: "Staatliches";
+  text-shadow: .5px .5px #d8adc7;
+  color: #181bcaba;
+  font-family: "Press start 2P";
   padding: 1em;
-  background-color: rgb(0,0,0,.2);
-  border-radius: 60px;
+  
+  
 }
 
 
 p{
   font-size: 20px;
+  text-shadow: 2px 2px rgba(0,0,0);
 }
 
 .news-header{
@@ -197,23 +192,52 @@ border-radius: 5px; */
 }
 
 .exchanger{
-  color: var(--june-bud);
-  font-family: "Cinzel";
+  color: #c6dbda;
+  text-shadow: 2px 2px #d8adc7;
+  font-family: "Press Start 2P";
   font-weight: bold;
   text-shadow: .5px .5px rgba(0,0,0)
 }
 
 .top_button{
-  background-color: var(--space-cadet);
-  box-shadow:  0 0 .25em black;
+  margin-bottom: 40px; 
 }
 
 h1{
   white-space: nowrap;
 
 }
+a{
+  white-space: nowrap;
+}
+h2{
+  font-family: 'Press Start 2P';
+  color: #c6dbda;
+  text-shadow: 2px 2px #d8adc7
+}
 
 h4{
   font-family: "Staatliches";
   color: #181bcaba;
+}
+
+input {
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  font-size: 1.2em;
+  border-radius: 5px;
+}
+
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  font-size: 1.2em;
+  border-radius: 5px;
+}
+
+.saveheader{
+  cursor: pointer;
 }
