--- a/currency-converter/src/index.css
+++ b/currency-converter/src/index.css
@@ -7,9 +7,16 @@
   --portland-orange: rgba(244, 96, 54, 1); 
   --space-cadet: rgba(27, 153, 139, 1);
   --june-bud: rgba(197, 216, 109, 1);
-  background: linear-gradient(#c6dbda,#fee1e8,#fed7c3, #f6eac2, #ecd5e3);
+  
 }
+body{
+  height: 100%;
+  margin: 0;  
+  background: linear-gradient(#c6dbda,#fee1e8,#fed7c3, #f6eac2, #ecd5e3);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 
+}
 .news-list{
   margin: 0 auto;
   background-color:	rgb(0,0,0,.7);
@@ -245,5 +252,9 @@ select {
 }
 
 .saveheader{
+  cursor: pointer;
+}
+
+h1{
   cursor: pointer;
 }
